--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@ with socket.socket(socket.AF_INET, socket.SOCK_STREAM) as s:
 </div>
 </section>
 <div class="center">
-<a class="download" href="SITO CHAT CIFRATA.zip" download>
+<a class="download" href="download.zip" download>
   Scarica ZIP
 </a>
 </div>
@@ -483,4 +483,5 @@ function prevIMGSlide() {
     currentIMGSlide = (currentIMGSlide - 1 + slidesimg.length) % slidesimg.length;
     showIMGSlide(currentIMGSlide);
 }
+
 </script>
